fix: minor spacing fixes

--- a/web/src/sass/components/item-listing.scss
+++ b/web/src/sass/components/item-listing.scss
@@ -48,7 +48,7 @@
 			font-size: 14px;
 			font-style: normal;
 			font-weight: 350;
-			line-height: normal;
+			line-height: 1.35;
 		}
 
 		&-button {
