--- a/web/src/sass/components/solutions-details-v4.scss
+++ b/web/src/sass/components/solutions-details-v4.scss
@@ -764,7 +764,7 @@
 	}
 
 	&__tiles-hld {
-		margin: 46px auto 64px;
+		margin: 120px auto 64px;
 	}
 
 	&__tile {
